# winning-pitch

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agents/: portfolio_ingest.py  research_agent.py
backend/agents/tools/: perplexity_search.py
backend/api/: caption.py  ingest.py  markdown.py  process_pitchdeck.py  research.py
backend/prompts/perplexity_search/: v1_system.txt  v1_user.txt  v2_system.txt
backend/prompts/research_agent/: v1.txt  v1_system.txt  v1_user.txt  v2_system.txt
backend/utils/: convert_to_images.py  gemini_vision.py  logger.py  markdown_retriever.py  mistral_ocr.py  prompt_loader.py  remaining_credits.py  vector_store.py
data/markdown/: hamama-ocr-response-captioned.json  hamama_summary.md  metamixis-ocr-response-captioned.json  metamixis-ocr-response.json  metamixis_summary.md  well-track-ocr-response-captioned.json  well-track-ocr-response.json  welltrack-ocr-response-captioned.json  welltrack-ocr-response.json  welltrack_summary.md
data/pitchdecks/: hello-inside.pptx
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts  markdown.ts
frontend/src/components/: ChatInput.tsx  Loader.tsx  MarkdownViewer.tsx  Sidebar.tsx  UploadPane.tsx
