[project]
name = "winning-pitch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.4",
    "langgraph>=1.0.2",
    "mistralai>=1.9.11",
    "openai>=2.7.1",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic-ai>=1.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
